# gdstl

./: .gitignore  CMakeLists.txt  README.md
include/: gdstl.h  gdstl.hpp
include/gdstl/: allocator.h  allocator.hpp  container_base.h  container_base.hpp  map.h  map.hpp  platform.h  platform.hpp  string.h  string.hpp  vector.h  vector.hpp
scripts/: build_android.bat  build_windows.bat  clear.bat  vars.bat
src/: android_allocator.cpp  windows_allocator.cpp
