CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(gdstl)

# Checks

IF (NOT GDSTL_PATH)
    MESSAGE(FATAL_ERROR "\"GDSTL_PATH\" variable not set!")
ENDIF()

STRING(REPLACE "\\" "/" GDSTL_PATH_ESCAPED ${GDSTL_PATH})

IF(NOT GDSTL_TARGET)
    MESSAGE(FATAL_ERROR "\"GDSTL_TARGET\" variable not set!")
ENDIF()

STRING(TOLOWER ${GDSTL_TARGET} GDSTL_TARGET_LOWER)

IF (NOT GDSTL_TARGET_LOWER STREQUAL "android" AND
    NOT GDSTL_TARGET_LOWER STREQUAL "windows")
    MESSAGE(FATAL_ERROR "Invalid \"GDSTL_TARGET\" value!")
ENDIF()

# Include directories

INCLUDE_DIRECTORIES(
	include
)

#Source files

set (GDSTL_SRC
    ${GDSTL_PATH_ESCAPED}/src/${GDSTL_TARGET_LOWER}_allocator.cpp
)

# Define library

ADD_LIBRARY(gdstl STATIC ${GDSTL_SRC})

# Link libraries

IF (GDSTL_TARGET_LOWER STREQUAL "android")
    TARGET_LINK_LIBRARIES(gdstl dl)
ENDIF()