CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(gdstl)

# Checks

IF (NOT GDSTL_PATH)
    SET(GDSTL_PATH ${CMAKE_CURRENT_SOURCE_DIR})
    MESSAGE(WARNING "\"GDSTL_PATH\" not set, using fixed variable instead.")
ENDIF()

STRING(REPLACE "\\" "/" GDSTL_PATH_ESCAPED ${GDSTL_PATH})

IF(NOT GDSTL_TARGET)
    SET(GDSTL_TARGET ${CMAKE_SYSTEM_NAME})
    MESSAGE(WARNING "\"GDSTL_TARGET\" not set, using fixed variable instead.")
ENDIF()

STRING(TOLOWER ${GDSTL_TARGET} GDSTL_TARGET_LOWER)

IF (NOT GDSTL_TARGET_LOWER STREQUAL "android" AND
    NOT GDSTL_TARGET_LOWER STREQUAL "windows")
    MESSAGE(FATAL_ERROR "Invalid \"GDSTL_TARGET\" value!")
ENDIF()

# Include directories

INCLUDE_DIRECTORIES(
	include
)

#Source files

SET(GDSTL_SRC
    ${GDSTL_PATH_ESCAPED}/src/${GDSTL_TARGET_LOWER}_allocator.cpp
)

# Define library

ADD_LIBRARY(gdstl STATIC ${GDSTL_SRC})

# Link libraries

IF (GDSTL_TARGET_LOWER STREQUAL "android")
    TARGET_LINK_LIBRARIES(gdstl dl)
ENDIF()